--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.7.0",
     "morgan": "~1.9.1"
   }
 }
