--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.16.2",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "moment": "^2.24.0",
     "mongodb": "^3.3.2",
     "mongoose": "^5.7.0",
     "morgan": "~1.9.1",
