--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.1.0",
     "express": "~4.16.1",
     "express-session": "^1.16.2",
+    "handlebars-paginate": "^0.1.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
