--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "~4.16.1",
     "express-session": "^1.16.2",
     "handlebars-paginate": "^0.1.0",
-    "hbs": "~4.0.4",
+    "hbs": "^4.1.0",
     "http-errors": "~1.6.3",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
